[gd_scene load_steps=2 format=3]

[ext_resource type="Script" uid="uid://66d8hq1wvuhf" path="res://start_screen.gd" id="1_7f0y5"]

[node name="StartScreen" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7f0y5")

[node name="Control" type="Control" parent="."]
layout_mode = 2

[node name="Title" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -80.0
offset_right = 90.0
offset_bottom = -60.0
text = "Abyssal Idle"
horizontal_alignment = 1

[node name="LoadButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -20.0
offset_right = 80.0
offset_bottom = 10.0
text = "Load Game"

[node name="NewButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 20.0
offset_right = 80.0
offset_bottom = 50.0
text = "New Game"

[connection signal="pressed" from="Control/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="Control/NewButton" to="." method="_on_new_button_pressed"]
